// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step3 - mergeDuplicates (snapshots) > case basic > basic 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: green;
  }
}

@theme {
  --theme-var: var(--color-red);
}

@media (max-width: 768px) {
  .test {
    color: yellow;
  }
}"
`;

exports[`step3 - mergeDuplicates (snapshots) > case class-selectors > class-selectors 1`] = `
"@layer components {
  .btn {
    color: green;
    background-color: blue;
    padding: 8px;
    border: 1px solid red;
  }
}"
`;

exports[`step3 - mergeDuplicates (snapshots) > case comma-separated > comma-separated 1`] = `
"@layer components {
  .btn,
  .icon-btn {
    color: green;
  }
}"
`;

exports[`step3 - mergeDuplicates (snapshots) > case dark-variants > dark-variants 1`] = `
"@layer components {
  .btn {
    color: yellow;
  }
  .dark .btn {
    color: purple;
  }
}"
`;

exports[`step3 - mergeDuplicates (snapshots) > case media-queries-in-selectors > media-queries-in-selectors 1`] = `
"@layer components {
  .btn {
    color: green;
    @media (max-width: 768px) {
      color: yellow;
    }
  }
}"
`;

exports[`step3 - mergeDuplicates (snapshots) > case mixed-selector-list > mixed-selector-list 1`] = `
"@layer components {
  .btn {
    color: red;
  }
}"
`;

exports[`step3 - mergeDuplicates (snapshots) > case nested-selectors > nested-selectors 1`] = `
"@layer components {
  .btn {
    color: green;
    background-color: blue;
    border: 1px solid red;
    &:focus-visible {
      outline: 2px solid red;
    }
    &:active {
      transform: translate(-2px, -2px);
    }
    &:hover {
      transform: scale(0.99);
    }
  }
}"
`;

exports[`step3 - mergeDuplicates (snapshots) > case theme-class-not-leading > theme-class-not-leading 1`] = `
"@layer components {
  .container .btn {
    color: green;
  }
}"
`;
